add a new branch with class

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Star Wars api</title>
+    <title>Rick & Morty api</title>
   </head>
   <body>
     <div id="root">
     </div>
     <footer>
-      <a href="https://github.com/akabab/starwars-api">Api Star Wars !</a>
+      <a href="https://rickandmortyapi.com/api/character/">Api Rick & Morty !</a>
     </footer>
     <!--
       To create a production bundle, use `npm run build` or `yarn build`.
